# geofleet-microservices

./: .gitignore  Makefile  README.md  docker-compose.yml
benchmark/: main.py  pyproject.toml
nginx/: nginx.conf
services/driver/: Dockerfile  main.py  pyproject.toml
services/driver/api/: dependencies.py  routes.py  schemas.py
services/driver/domain/: entities.py  repositories.py
services/driver/infrastructure/: database.py  models.py  postgres_repository.py
services/driver/use_cases/: driver_use_cases.py
services/location_ingest/: Dockerfile  main.py  pyproject.toml
services/location_ingest/api/: dependencies.py  routes.py  schemas.py
services/location_ingest/domain/: entities.py  repositories.py
services/location_ingest/infrastructure/: redis_connection.py  redis_stream_repository.py
services/location_ingest/use_cases/: ingest_use_cases.py
services/location_processor/: Dockerfile  main.py  pyproject.toml
services/location_processor/domain/: repositories.py
services/location_processor/infrastructure/: redis_connection.py  redis_geo_repository.py
services/location_processor/use_cases/: processor_use_cases.py
services/nearby_search/: Dockerfile  main.py  pyproject.toml
services/nearby_search/api/: dependencies.py  routes.py  schemas.py
services/nearby_search/domain/: entities.py  repositories.py
services/nearby_search/infrastructure/: redis_geo_repository.py
services/nearby_search/use_cases/: search_use_cases.py
simulator/: main.py  pyproject.toml
