[project]
name = "nearby-search"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.138.2",
    "pydantic>=2.13.4",
    "pydantic-settings>=2.14.2",
    "redis>=8.0.1",
    "uvicorn>=0.49.0",
    "orjson>=3.10.12",
    "uvloop>=0.21.0; sys_platform != 'win32'",
]
